
CREATE TYPE STATUT_UTILISATEUR AS ENUM ('ACTIF', 'INACTIF');

CREATE TYPE ETAT_OFFRE AS ENUM ('NON PUBLIEE', 'PUBLIEE', 'EXPIREE');

CREATE TYPE SEXE AS ENUM ('HOMME', 'FEMME', 'AUTRE');

CREATE TYPE TYPE_ORGANISATION AS ENUM ('ENTREPRISE', 'ASSOCIATION', 'EURL', 'SARL', 'SASU' ,'AUTRE');

CREATE TYPE TYPE_UTILISATEUR AS ENUM ('ADMINISTRATEUR', 'RECRUTEUR', 'CANDIDAT');

CREATE TYPE TYPE_FORMATION AS ENUM ('AJOUT ORGANISATION', 'ORGANISATION EXISTANTE');

CREATE TABLE Utilisateur (
    email VARCHAR() PRIMARY KEY,
    password VARCHAR() PRIMARY KEY,
    nom VARCHAR(),
    prenom VARCHAR(),
    date_creation DATE,
    telephone VARCHAR(10),
    statut STATUT_UTILISATEUR,
    sexe SEXE,
    type_utilisateur TYPE_UTILISATEUR,
)